.provarCaches/00D410000011HE0EAM/objects/rstk__poloader__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_poloader</customHelpPage>
    <description>poloader__c</description>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Item Grade</description>
        <inlineHelpText>Item Grade</inlineHelpText>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_itemtype__c</fullName>
        <formula>TEXT(rstk__poloader_poitem__r.rstk__poitem_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_agreeno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__poagrhdr__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_async__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asynchronous Processing</description>
        <inlineHelpText>When checked, record will be processed &quot;in background&quot;, meaning that it will process when Periodic Batch Processor cycles. Note that if field is set &amp; does not process within a few minutes, it may be that Periodic Batch Processor needs to be restarted.</inlineHelpText>
        <label>Asynchronous Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_asyncgroup__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Asynchronous Processing Group</inlineHelpText>
        <label>Asynchronous Processing Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_buyusrno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is used to initialize or update the Responsible Buyer field on the Purchase Order Header.  When specified it overrides any other existing or default value.</inlineHelpText>
        <label>Responsible Buyer</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>poloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_city__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_delalllines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete All Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_dimval1__c</fullName>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_dimval2__c</fullName>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_dimval3__c</fullName>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_dimvalovr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override/Update Dimension Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_errorstack__c</fullName>
        <inlineHelpText>Error stack for PO load process.</inlineHelpText>
        <label>Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_expenseacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When specified, this field is used to override the Expense Account that will be used on the Purchase Order Line created for this Indirect or Service Item.  When blank, existing default methods are used to set the account.</inlineHelpText>
        <label>Expense Account (Indirect/Service)</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_hdrnotes__c</fullName>
        <description>PO Header Notes</description>
        <inlineHelpText>Populate with user-defined PO Header Notes to be printed on PO.</inlineHelpText>
        <label>PO Header Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_icreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Requisition</label>
        <referenceTo>rstk__icreq__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>POLoaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_isocountry__c</fullName>
        <description>poloader_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poloader_lineaddressovr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Line Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_linenotes__c</fullName>
        <description>PO Line Notes</description>
        <inlineHelpText>Populate with user-defined PO Line Notes to be printed on PO.</inlineHelpText>
        <label>PO Line Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_message__c</fullName>
        <inlineHelpText>Error message for PO load process.</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_mode__c</fullName>
        <description>API Mode</description>
        <inlineHelpText>Mode/function for this transaction.  Options are

Add Header
Add Line
Add Both
Change Header
Change Line
Change Both
Close Line Short
Submit to Vendor</inlineHelpText>
        <label>API Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Header</fullName>
                </value>
                <value>
                    <fullName>Add Line</fullName>
                </value>
                <value>
                    <fullName>Add Both</fullName>
                </value>
                <value>
                    <fullName>Change Header</fullName>
                </value>
                <value>
                    <fullName>Change Line</fullName>
                </value>
                <value>
                    <fullName>Change Both</fullName>
                </value>
                <value>
                    <fullName>Close Line Short</fullName>
                </value>
                <value>
                    <fullName>Submit to Vendor</fullName>
                </value>
                <value>
                    <fullName>Close All Lines Short</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>Delete Header</fullName>
                </value>
                <value>
                    <fullName>Delete Both</fullName>
                </value>
                <value>
                    <fullName>Delete Line</fullName>
                </value>
                <value>
                    <fullName>API Mode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poloader_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>poloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poagh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__poagh__c.rstk__poagh_active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__poagh__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>poloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poapmatchsydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO AP Match Sydata</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>PO Loaders (PO AP Match Sydata)</relationshipLabel>
        <relationshipName>poapmatchpoloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poauthsydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Authorization Sydata</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>poauthpoloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_pohdrkey__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>poloader_pohdrkey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase Order Line</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>polinePoloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_polinekey__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>poloader_polinekey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Requisition</label>
        <referenceTo>rstk__poreq__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>poloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_poumcf__c</fullName>
        <inlineHelpText>This field is used to initialize or update the Purchasing UOM Conversion Factor field on the Purchase Order Line.    When specified it overrides any other existing or default value.</inlineHelpText>
        <label>Purchasing UOM Conversion Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_pricesrce__c</fullName>
        <inlineHelpText>This field carries the information returned by the PO Line Price algorithm that identifies the source of the price it derived.</inlineHelpText>
        <label>Price Source</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_process__c</fullName>
        <inlineHelpText>This is an indicator for the status of the Load  process.</inlineHelpText>
        <label>Processing Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Validation Failure</fullName>
                </value>
                <value>
                    <fullName>Processing Failure</fullName>
                </value>
                <value>
                    <fullName>Batch Processing Failure</fullName>
                </value>
                <value>
                    <fullName>ProcessingComplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poloader_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_puruom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is used to initialize or update the Purchasing UOM field on the Purchase Order Line. When specified it overrides any other existing or default value.</inlineHelpText>
        <label>Purchasing UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_qtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Req</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_rcptlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Receipt Location ID is set from the Inventory Item (or it&apos;s Commodity Code) for all Direct items. It may be overwritten during the receipt transaction. This is the location where the item will be when received.</inlineHelpText>
        <label>Receipt Location ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__sylocid__c.rstk__sylocid_loctype_pl__c</field>
                <operation>equals</operation>
                <value>On Hand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_rcptlocnum__c</fullName>
        <inlineHelpText>The physical location within the chosen receipt location id where this item will be received. Defaults from the inventory item master (Commodity Code) but can be overwritten during the receipt process.</inlineHelpText>
        <label>Receipt Location No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_receiptsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Receipt Site for this PO Line which defaults from the Division master Settings/Defaults tab.</inlineHelpText>
        <label>Receipt Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__sysite__c.rstk__sysite_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__poloader_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_receive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_schedrcptdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_spawnpoclose__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this PO Loader will spawn a SYDATA record to complete the PO Close, as background processing.</inlineHelpText>
        <label>Spawn PO Close After Close All Short</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_state__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_stname__c</fullName>
        <inlineHelpText>Ship to Name</inlineHelpText>
        <label>Ship to Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_street__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_submittovendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Submit To Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_syorg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associated Organizational Department</inlineHelpText>
        <label>Organizational Department</label>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>poloaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_sysprice__c</fullName>
        <inlineHelpText>This field carries a record of the price that was returned by the PO Line Price algorithm (which may or may not have been used on the Purchase Order Line).</inlineHelpText>
        <label>System Calculated Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transfer Payables Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_unitprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_updatecustfields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update (overwrite) Custom Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_upgroup__c</fullName>
        <description>When adding a PO &amp; multiple lines, because the user doesn&apos;t know what the PO # will be for additional lines to be added, enter a &quot;Upload Group&quot; on each line being added in a batch. This allows the code to understand they are to be added to the same PO.</description>
        <inlineHelpText>When adding a PO &amp; multiple lines, because the user doesn&apos;t know what the PO # will be for additional lines to be added, enter an &quot;Upload Group&quot; on the set of records (header and lines) to group together, when added in a batch.</inlineHelpText>
        <label>Upload Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_useicreq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Line Detail From Requisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Work Order associated with this PO Line for Outside Operations</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Work Order Operation associated with this PO Line for Outside Operations</inlineHelpText>
        <label>Work Order Operation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__woordop__c.rstk__woordop_ordno__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__poloader_wocst__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>PO Loaders</relationshipLabel>
        <relationshipName>PO_Loaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poloader_zip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Zipcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Loader</label>
    <listViews>
        <fullName>NPPOLOADER</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_vendno__c</columns>
        <columns>rstk__poloader_pohdr__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_poitem__c</columns>
        <columns>rstk__poloader_qtyreq__c</columns>
        <columns>rstk__poloader_unitprice__c</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016 12:00 AM</value>
        </filters>
        <label>NPPOLOADER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PO_Loader1</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_vendno__c</columns>
        <columns>rstk__poloader_ordno__c</columns>
        <columns>rstk__poloader_pohdr__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_poitem__c</columns>
        <columns>rstk__poloader_qtyreq__c</columns>
        <columns>rstk__poloader_unitprice__c</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poloader_async__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PO Loader1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__poloader_upgroup__c</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_pohdr__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_ordno__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_asyncgroup__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>rstk__poloader_errorstack__c</columns>
        <columns>rstk__poloader_buyusrno__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>HCHVPE</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__POLOADER_Past_Week</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_ordno__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_proj__c</columns>
        <columns>rstk__poloader_qtyreq__c</columns>
        <columns>rstk__poloader_unitprice__c</columns>
        <columns>rstk__poloader_schedrcptdte__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>POLOADER - Past Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__POLOADER_Today</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_ordno__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_proj__c</columns>
        <columns>rstk__poloader_qtyreq__c</columns>
        <columns>rstk__poloader_unitprice__c</columns>
        <columns>rstk__poloader_schedrcptdte__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>POLOADER - Today</label>
    </listViews>
    <listViews>
        <fullName>rstk__POLoader_Add_Both_KH</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__poloader_vendno__c</columns>
        <columns>rstk__poloader_pohdr__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_poitem__c</columns>
        <columns>rstk__poloader_qtyreq__c</columns>
        <columns>rstk__poloader_unitprice__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poloader_mode__c</field>
            <operation>equals</operation>
            <value>Add Both</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>holliday</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>POLOADER Add Both - KH</label>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Loader</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_upgroup__c</columns>
        <columns>rstk__poloader_pohdr__c</columns>
        <columns>rstk__poloader_ordno__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_poitem__c</columns>
        <columns>rstk__poloader_receive__c</columns>
        <columns>rstk__poloader_submittovendor__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/21/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>rstk__poloader_ordno__c</field>
            <operation>equals</operation>
            <value>3193</value>
        </filters>
        <label>PO Loader</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Loader_Add_Both</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloader_div__c</columns>
        <columns>rstk__poloader_process__c</columns>
        <columns>rstk__poloader_mode__c</columns>
        <columns>rstk__poloader_poitem__c</columns>
        <columns>rstk__poloader_vendno__c</columns>
        <columns>rstk__poloader_asyncgroup__c</columns>
        <columns>rstk__poloader_message__c</columns>
        <columns>rstk__poloader_upgroup__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__poloader_pohdr__c</columns>
        <columns>rstk__poloader_poline__c</columns>
        <columns>rstk__poloader_async__c</columns>
        <filterScope>Everything</filterScope>
        <label>PO Loader - Add Both</label>
        <language>en_US</language>
    </listViews>
</CustomObject>